# invoice-parse

./: .dockerignore  .env.sample  .gitignore  README.md  seed.sql
.github/workflows/: pages.yml
config/: docker.yaml  local.yaml  production.yaml
demo/: index.html  package-lock.json  package.json  vite.config.ts
demo/src/: gis.d.ts  main.ts  styles.css
demo/src/lib/: auth.ts  excel-gen.ts  gemini.ts  ocr.ts  pdf-to-image.ts  pipeline.ts  prompt-builder.ts  table-extract.ts  types.ts  validation.ts
docs/: architecture.md  devlog.md  plan_dashboard.md  plan_infra_cloud.md  plan_infra_local.md  plan_ingestion.md  plan_output.md  plan_processing.md
infra/: docker-compose.yaml
libs/shared-py/: pyproject.toml
libs/shared-py/invoice_shared/: __init__.py  config.py  db.py  models.py
libs/shared-py/invoice_shared.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
libs/shared-py/invoice_shared/adapters/: __init__.py  blob_store.py  factory.py  queue.py
libs/shared-rs/: Cargo.toml
libs/shared-rs/src/: config.rs  db.rs  lib.rs  models.rs
libs/shared-rs/src/adapters/: blob_store.rs  mod.rs  queue.rs
migrations/: 001_initial.sql
scripts/: load_test.sh
services/dashboard/: Dockerfile  pyproject.toml  requirements.txt
services/dashboard/dashboard/: __init__.py  app.py
services/ingestion/: Cargo.toml  Dockerfile
services/ingestion/src/: ingest.rs  main.rs
services/processing/: .env.sample  Dockerfile  pyproject.toml
services/processing/invoice_processing/: __init__.py  __main__.py  cli.py  extraction.py  ocr.py  table_extract.py  validation.py  worker.py
tests/python/: conftest.py  test_blob_store.py  test_db.py  test_queue.py
