[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "invoice-shared"
version = "0.1.0"
description = "Shared infrastructure for invoice parsing pipeline"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.12,<3",
    "sqlalchemy>=2.0,<3",
    "psycopg>=3.2,<4",
    "redis>=7.3,<8",
    "pyyaml>=6.0,<7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.setuptools.packages.find]
include = ["invoice_shared*"]
